feat: Add advanced tax date calculation and UI improvements

--- a/src/data/barobill-knowledge.json
+++ b/src/data/barobill-knowledge.json
@@ -344,7 +344,115 @@
           "icon": "📺"
         }
       ]
-    }
+    },
+    {
+          "id": "case_return_example_0916",
+          "type": "case",
+          "source": "manual",
+          "status": "active",
+          "category": "수정세금계산서",
+          "title": "9월 16일 거래분 반품 처리 (환입)",
+          "keywords": ["9월", "반품", "환입", "수정", "11월 5일"],
+          "priority": 9,
+          "dateTemplate": true,
+          "negativeKeywords": ["착오", "오타", "이중발급"],
+          "responses": {
+            "formal": "9월 16일 거래가 11월 5일에 반품되었다면, **'환입'** 사유로 수정세금계산서를 발급해야 합니다.\n\n- **작성일자:** 반품된 날짜인 **11월 5일**\n- **발급기한:** 11월 5일의 다음 달 10일인 **12월 10일**\n- **가산세:** 12월 10일까지 발급 시 가산세가 없으나, 기한을 넘기면 지연발급(1%) 가산세가 부과됩니다.",
+            "casual": "9월 16일 거 11월 5일에 반품됐구나! '환입'으로 수정발급하면 돼.\n\n- **날짜는?** 반품된 날짜인 **11월 5일**로!\n- **언제까지?** **12월 10일**까지 발급해야 가산세 없어. 늦으면 1% 가산세야! 😱",
+            "plain": "9/16 거래, 11/5 반품 건은 '환입' 사유임. 작성일 11/5, 발급기한 12/10. 기한 경과 시 지연발급 가산세 1%."
+          },
+          "followUpQuestions": ["가산세는 얼마인가요?", "작성일자가 원본과 다른가요?"]
+        },
+        {
+          "id": "case_cancel_example_0916",
+          "type": "case",
+          "source": "manual",
+          "status": "active",
+          "category": "수정세금계산서",
+          "title": "9월 16일 거래 계약 해제 처리",
+          "keywords": ["9월", "계약 해제", "계약해제", "계약취소", "취소", "수정"],
+          "priority": 10,
+          "dateTemplate": true,
+          "negativeKeywords": ["착오", "반품", "환입"],
+          "responses": {
+            "formal": "9월 16일 거래가 11월 15일에 계약 해제되었다면, **'계약의 해제'** 사유로 수정세금계산서를 발급해야 합니다.\n\n- **작성일자:** 계약이 해제된 날짜인 **11월 15일**\n- **발급기한:** 11월 15일의 다음 달 10일인 **12월 10일**\n- **가산세:** 12월 10일까지 발급 시 가산세가 없습니다.",
+            "casual": "9월 16일 계약이 11월 15일에 취소됐어? '계약의 해제'로 수정발급해!\n\n- **날짜는?** 계약 해제된 **11월 15일**\n- **언제까지?** **12월 10일**까지 발급해야 가산세 없어!",
+            "plain": "9/16 거래, 11/15 계약 해제 건은 '계약의 해제' 사유임. 작성일 11/15, 발급기한 12/10. 기한 내 가산세 없음."
+          },
+          "followUpQuestions": ["환입과 계약해제의 차이", "발급기한 놓치면?"]
+        },
+        {
+          "id": "case_amount_change_example_0916",
+          "type": "case",
+          "source": "manual",
+          "status": "active",
+          "category": "수정세금계산서",
+          "title": "9월 16일 거래분 할인 (공급가액 변동)",
+          "keywords": ["9월", "할인", "금액변경", "공급가액", "변동", "수정"],
+          "priority": 9,
+          "dateTemplate": true,
+          "negativeKeywords": ["착오", "반품"],
+          "responses": {
+            "formal": "9월 16일 거래에 대해 11월 20일에 할인이 결정되었다면, **'공급가액 변동'** 사유로 수정세금계산서를 발급합니다.\n\n- **작성일자:** 할인이 결정된 날짜인 **11월 20일**\n- **발급기한:** 11월 20일의 다음 달 10일인 **12월 10일**\n- **금액:** 할인된 금액만큼 마이너스(-)로 입력합니다.",
+            "casual": "9월 16일 거 11월 20일에 할인해줬어? '공급가액 변동'으로 수정발급해!\n\n- **날짜는?** 할인해준 **11월 20일**\n- **언제까지?** **12월 10일**까지!",
+            "plain": "9/16 거래, 11/20 할인 건은 '공급가액 변동' 사유임. 작성일 11/20, 발급기한 12/10. 할인액만큼 (-) 입력."
+          },
+          "followUpQuestions": ["추가 청구도 공급가액 변동인가요?"]
+        },
+        {
+          "id": "case_error_correction_example_0916",
+          "type": "case",
+          "source": "manual",
+          "status": "active",
+          "category": "수정세금계산서",
+          "title": "9월 16일 거래분 주소 오류 (기재사항 착오)",
+          "keywords": ["9월", "주소", "오류", "오타", "잘못", "착오정정", "수정"],
+          "priority": 9,
+          "dateTemplate": true,
+          "negativeKeywords": ["반품", "취소", "할인"],
+          "responses": {
+            "formal": "9월 16일 거래의 주소를 11월 25일에 발견했다면, **'기재사항 착오정정'** 사유로 수정발급합니다.\n\n- **작성일자:** 원본 날짜인 **9월 16일** (변경 불가)\n- **발급기한:** 원본의 부가세 **확정신고기한**인 **2026년 1월 25일**까지\n- **가산세:** 2026년 1월 25일 이내에 수정하면 가산세가 없습니다.",
+            "casual": "9월 16일 거 주소 틀린 걸 11월 25일에 알았다고? '기재사항 착오정정'이야!\n\n- **날짜는?** 원본 날짜인 **9월 16일** 그대로!\n- **언제까지?** 내년 **1월 25일**까지만 수정하면 가산세 없어. 다행이지? 😄",
+            "plain": "9/16 거래, 11/25 주소 오류 발견 건은 '기재사항 착오정정' 사유임. 작성일 9/16 (원본일), 수정기한 2026-01-25. 기한 내 가산세 없음."
+          },
+          "followUpQuestions": ["금액도 착오정정으로 수정하나요?", "사업자번호를 잘못 썼어요"]
+        },
+        {
+          "id": "case_duplicate_example_0916",
+          "type": "case",
+          "source": "manual",
+          "status": "active",
+          "category": "수정세금계산서",
+          "title": "9월 16일 거래분 이중발급 처리",
+          "keywords": ["9월", "이중발급", "중복발급", "두번", "수정"],
+          "priority": 9,
+          "dateTemplate": true,
+          "negativeKeywords": ["반품", "착오정정"],
+          "responses": {
+            "formal": "9월 16일 거래가 이중발급된 것을 12월 1일에 발견했다면, **'착오에 의한 이중발급'** 사유로 수정발급합니다.\n\n- **작성일자:** 원본 날짜인 **9월 16일**\n- **발급기한:** 원본의 부가세 **확정신고기한**인 **2026년 1월 25일**까지\n- **처리:** 12월 1일에, 9월 16일자로 마이너스(-) 1장만 발급하면 됩니다.",
+            "casual": "9월 16일 거 두 번 보냈어? 12월 1일에 알았어도 괜찮아! '착오에 의한 이중발급' 쓰면 돼.\n\n- **날짜는?** 원본 날짜 **9월 16일**로!\n- **언제까지?** 내년 **1월 25일**까지만 수정하면 가산세 없어!",
+            "plain": "9/16 거래, 12/1 이중발급 발견 건은 '착오에 의한 이중발급' 사유임. 작성일 9/16 (원본일), 수정기한 2026-01-25. 원본 전액 (-) 1장 발급."
+          },
+          "followUpQuestions": ["착오정정과 이중발급의 차이"]
+        },
+        {
+          "id": "case_post_lc_example_0916",
+          "type": "case",
+          "source": "manual",
+          "status": "active",
+          "category": "수정세금계산서",
+          "title": "9월 16일 거래분 내국신용장 사후개설",
+          "keywords": ["9월", "내국신용장", "사후개설", "영세율", "수정"],
+          "priority": 9,
+          "dateTemplate": true,
+          "negativeKeywords": ["반품", "착오정정"],
+          "responses": {
+            "formal": "9월 16일(과세 10%) 거래에 대해 **10월 20일**에 내국신용장이 개설되었다면, **'내국신용장 사후개설'** 사유로 수정발급합니다.\n(참고: 9월분 사후개설 기한은 10월 25일까지입니다.)\n\n- **작성일자:** 원본 날짜인 **9월 16일**\n- **처리:** 총 2장 발급 (①원본 10% 취소 (-), ②영세율 0% 신규 (+))\n- **발급기한:** 10월 25일(부가세 예정신고기한)까지 발급하는 것이 원칙이나, 확정신고기한(2026-01-25)까지 발급해도 됩니다.",
+            "casual": "9월 16일에 10%로 끊었는데 10월 20일에 신용장 나왔어? '내국신용장 사후개설'로 바꾸면 돼! (10월 25일 안에 개설돼서 다행이다!)\n\n- **날짜는?** 원본 날짜 **9월 16일**!\n- **어떻게?** 2장 나갈 거야. (① 10%짜리 취소, ② 0%짜리 새로 발급)",
+            "plain": "9/16 과세, 10/20 내신 개설 건은 '내국신용장 사후개설' 사유임. (기한 10/25 내 충족). 작성일 9/16 (원본일), 2장 발급 (과세 취소, 영세 신규)."
+          },
+          "followUpQuestions": ["신용장 개설이 10월 25일 이후면?"]
+        }
   ]
 }
 
